# Roleplay_Chat_Backend

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_GUIDE.md  LOGGING.md  README.md  app.py  pyproject.toml  pytest.ini
ai_prompts/: AI_Coding_Principles.md  Project_Description.md
alembic/: env.py
alembic/versions/: 4d81eb779c86_add_formatting_settings_fields.py  __init__.py  d15294f33e99_add_encrypted_openrouter_api_key_to_.py  d69c0aed44a2_add_first_messages_support.py  d8452839cce2_initial_migration_create_all_tables.py  dda9107eac76_add_first_messages_and_initialization_.py
app/: __init__.py  config.py
app/api/: __init__.py
app/models/: __init__.py  ai_model.py  application_settings.py  base.py  character.py  chat_session.py  message.py  system_prompt.py  user_profile.py
app/repositories/: __init__.py  ai_model_repository.py  application_settings_repository.py  base_repository.py  character_repository.py  chat_session_repository.py  message_repository.py  system_prompt_repository.py  user_profile_repository.py
app/services/: __init__.py  ai_model_service.py  application_settings_service.py  character_extract_service.py  character_service.py  chat_session_service.py  file_upload_service.py  image_processing_service.py  message_service.py  png_character_parser.py  system_prompt_service.py  user_profile_service.py
app/utils/: __init__.py  db.py  encryption.py  exceptions.py  sse.py
documentation/: API_MODIFICATION_character_avatar.md  API_MODIFICATION_user_profile_avatar.md  Decisions_to_make.md  api_documentation.md  configuration_deployment_strategy.md  data_model_relationships.md  database_schema.sql  database_schema_evolution_strategy.md  dependencies_management_strategy.md  development_workflow_guide.md  error_handling_strategy.md  frontend_api_reference_png_extraction.md  global_roadmap.md  openrouter_setup.md  performance_optimization_strategy.md  phase3_database_backend_roadmap.md  phase3_part1_database_models_roadmap.md  phase3_part2_database_testing_roadmap.md  phase3_part3_repository_implementation_roadmap.md  phase3_part4_service_implementation_roadmap.md  phase3_part5_api_routes_implementation_roadmap.md  solutions.md  technical_architecture.md  testing_strategy.md  transaction_management_strategy.md
documentation/OpenRouter/: quickStart.md  streamingMode.md
documentation/api/: README.md  ai_models.md  application_settings.md  characters.md  chat_sessions.md  messages.md  openapi.json  openapi_usage.md  system_prompts.md  user_profiles.md
documentation/character_import/: png_character_extract_api.md
documentation/chat/: chat_roadmap.md  description.md  phase2_detailed_implementation.md
documentation/claudeCode/: claudecode_integration_plan.md  claudecode_test_commands.md  implementation_guide.md  test_claudecode.sh  todo_implementation.md
documentation/issues/: api_response_models_missing.md
scripts/: __init__.py  arm-chromeos-setup.sh  build-frontend.sh  db_init.py  deploy-from-git.sh  deploy.sh  dev-start.sh  dev-stop.sh  export_openapi.py  generate-encryption-key.sh  generate_test_data.py  logs.sh  prod-start.sh  prod-stop.sh  restart.sh  setup-environment.sh  status.sh  validate_api_docs.py
stubs/sqlalchemy-stubs/: __init__.pyi
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_ai_models_api.py  test_api_documentation.py  test_character_avatar_upload.py  test_character_extract_api.py  test_characters_api.py  test_chat_sessions_api.py  test_messages_api.py  test_messages_api_integration.py  test_send_message_api.py  test_settings_api.py  test_settings_openrouter_api.py  test_system_prompts_api.py  test_user_profile_avatar_upload.py  test_user_profiles_api.py
tests/models/: __init__.py  test_ai_model.py  test_application_settings.py  test_base.py  test_character.py  test_chat_session.py  test_message.py  (+2 more)
(+55 files in other folders)
