[project]
name = "llm-roleplay-chat-client"
version = "0.1.0"
description = "LLM Roleplay Chat Client V3 with SQLAlchemy backend"
authors = [
    {name = "User",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "flask-restx (>=1.2.0,<2.0.0)",
    "pydantic (>=2.0.0,<3.0.0)",
    "structlog (>=25.3.0,<26.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=10.0.0,<11.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: unit tests",
    "integration: integration tests"
]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*", "scripts/*"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-bugbear = "^24.12.12"
flake8-comprehensions = "^3.16.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pytest = "^8.1.0"
pytest-cov = "^5.0.0"

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
known_first_party = ["app"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "stubs"
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]
exclude = [".git", "__pycache__", "*.pyc", ".tox", ".eggs", "*.egg"]
per-file-ignores = [
    "scripts/generate_test_data.py:E501"
]
